# services-tree

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  settings.toml
.github/workflows/: tests.yml
migrations/: env.py
migrations/versions/: 2b173db605b6_add_service_table.py  4621497055f4_init_services_tree.py
services_tree/: __init__.py  cli.py  config.py  db.py  main.py  routes.py  service.py
tests/: __init__.py  conftest.py  test_routes.py
