[tool.poetry]
name = "services-tree"
version = "0.1.0"
description = ""
authors = ["Felipe Carlos <efelipecarlos@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "services_tree"}]

[tool.poetry.scripts]
services-tree = "services_tree.cli:app"

[tool.poetry.dependencies]
python = "^3.9"
dynaconf = "^3.2.4"
fastapi = "^0.109.1"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
gunicorn = "^21.2.0"
sqlmodel = "^0.0.14"
typer = {extras = ["all"], version = "^0.9.0"}
alembic = "^1.13.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"
pytest = "^7.4.4"
pre-commit = "^3.6.0"
httpx = "^0.26.0"
pytest-cov = "^4.1.0"

[tool.isort]
profile = "black"
line_length = 88
skip_glob = [ "docs", "notes" ]

[tool.ruff]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "I",   # isort
  "N",   # pep8 naming
  "PL",  # pylint
]

[tool.ruff.lint.pylint]
max-args = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
